# dytech

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmark/: .clang-tidy  CMakeLists.txt
benchmark/webbench/: Makefile  webbench  webbench.c
cmake/: CMakeLists.txt  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake
demo/: CMakeLists.txt
demo/echo/: CMakeLists.txt  echo_client.cc  echo_server.cc
demo/http-server/: CMakeLists.txt  http_server.cc  http_server.cpp
images/: server_design.drawio
src/: CMakeLists.txt
src/base/: CMakeLists.txt  chrono.cc  chrono.h  macros.h  no_destructor.h  pointers.cc  pointers.h  utils.cc  utils.h
src/core/: CMakeLists.txt  acceptor.cc  acceptor.cpp  acceptor.h  buffer.cc  buffer.cpp  buffer.h  cache.cc  cache.cpp  cache.h  connection.cc  connection.cpp  connection.h  distribution_agent.cc  distribution_agent.h  looper.cc  looper.cpp  looper.h  net_address.cc  net_address.cpp  net_address.h  poller.cc  poller.cpp  poller.h  server.cc  server.cpp  server.h  socket.cc  socket.cpp  socket.h  thread_pool.cc  thread_pool.cpp  thread_pool.h  turtle_server.h  typedefs.h  utils.h
src/http/: .clang-tidy  CMakeLists.txt  cgi_runner.cc  cgi_runner.h  cgier.cc  cgier.cpp  cgier.h  constants.cc  constants.h  header.cc  header.cpp  header.h  http_utils.cc  http_utils.cpp  http_utils.h  request.cc  request.cpp  request.h  response.cc  response.cpp  response.h
src/log/: CMakeLists.txt  logger.cc  logger.cpp  logger.h
test/: CMakeLists.txt
test/core/: acceptor_test.cc  acceptor_test.cpp  buffer_test.cc  buffer_test.cpp  cache_test.cc  cache_test.cpp  connection_test.cc  connection_test.cpp  looper_test.cc  looper_test.cpp  net_address_test.cc  net_address_test.cpp  poller_test.cc  poller_test.cpp  socket_test.cc  socket_test.cpp  thread_pool_test.cc  thread_pool_test.cpp
test/http/: header_test.cc  header_test.cpp  request_test.cc  request_test.cpp  response_test.cc  response_test.cpp
